Fix visibility of notification after habit editing

--- a/src/components/shared/Notification/Notification.scss
+++ b/src/components/shared/Notification/Notification.scss
@@ -57,7 +57,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 95;
+    z-index: 120;
 }
 
 @media (min-width: 768px) {
